tests/fixtures/syntax/valid/action_continuation_marker_only_line.repor
case "marker-only line continues further" {
  $ echo one \
\
two
  assert { exit 0 }
}
