tests/fixtures/syntax/invalid/single_line_assertion_multiple_expectations.repor
case "too many inline expectations" {
  $ true
  assert { exit 0 stdout empty }
}
